# alphapayy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
data/: APPROACH_COMPARISON.md  graph_workflow_ft_dataset_sample.jsonl
docs/: A2A_INTEGRATION_PLAN.md  API.md  ARCHITECTURE.md  SYNTHETIC_DATASET.md  (+1 more)
graph_agent_litellm_fastapi/: .env.example  README.md  pyproject.toml  requirements.txt
graph_agent_litellm_fastapi/docs/: ARCHITECTURE.md
graph_agent_litellm_fastapi/src/graph_agent_litellm/: __init__.py
graph_agent_litellm_fastapi/src/graph_agent_litellm/agent/: agent.py  policies.py  state.py
graph_agent_litellm_fastapi/src/graph_agent_litellm/api_models/: chat.py  common.py  operations.py
graph_agent_litellm_fastapi/src/graph_agent_litellm/app/: dependencies.py  main.py
graph_agent_litellm_fastapi/src/graph_agent_litellm/app/routes/: chat.py  health.py  operations.py
graph_agent_litellm_fastapi/src/graph_agent_litellm/core/: config.py  errors.py  logging.py  security.py
graph_agent_litellm_fastapi/src/graph_agent_litellm/graph/: auth.py  client.py  operations.py
graph_agent_litellm_fastapi/src/graph_agent_litellm/llm/: client.py  prompts.py  types.py
graph_agent_litellm_fastapi/src/graph_agent_litellm/services/: chat_service.py  operations_service.py
graph_agent_litellm_fastapi/src/graph_agent_litellm/tools/: base.py  executor.py  graph_tools.py  registry.py
graph_agent_litellm_fastapi/tests/unit/: test_message_policy.py  test_operation_catalog.py  test_tool_executor.py
(+22 files in other folders)
