[project]
name = "graph-agent-litellm-fastapi"
version = "0.1.0"
description = "Low-abstraction Microsoft Graph agent using FastAPI and LiteLLM."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "msal>=1.28",
    "litellm>=1.50",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
